attempt to fix mobile horiz shifting

--- a/assets/fresh/partials/_utils.scss
+++ b/assets/fresh/partials/_utils.scss
@@ -1,3 +1,13 @@
+// no shifting around on mobile
+
+html, body {
+    overflow-x: hidden;
+}
+
+body {
+    position: relative;
+}
+
 // Resets
 section:focus {
     outline: none !important;
